[website] Fixing navbar background color on IE8

--- a/xtend.website.generator/website/css/iebugs.css
+++ b/xtend.website.generator/website/css/iebugs.css
@@ -5,3 +5,7 @@
 	overflow: visible !important;
 	position: static !important;
 }
+
+.navbar-inner {
+	filter: 
+}
